js/js.translator/testData/incremental/invalidation/defaultArgWrapperRemoved/main/m.0.kt
fun box(stepId: Int, isWasm: Boolean): String {
    return if (foo() == 42) "OK" else "Fail step0"
}
